--- a/assets/style/packages.css
+++ b/assets/style/packages.css
@@ -49,9 +49,12 @@ summary.package-details {
 #biocViews_package_table_filter input {
   border-radius: 0.25rem;
   border: 1px solid var(--neutral-n-75, #e7e8ea);
-  margin-top: 0.63rem;
   height: 2rem;
   padding: 0 0.5rem;
+}
+
+.package-input {
+  margin-top: 0.63rem;
 }
 
 #biocViews_package_table_info {
@@ -75,6 +78,12 @@ summary.package-details {
 #biocViews_package_table_next {
   color: var(--neutral-n200);
   cursor: pointer;
+}
+
+#biocViews_package_table_filter {
+  gap: 24px;
+  display: flex;
+  align-items: center;
 }
 
 #package-entries-wrapper {
