Added mobile styling

--- a/assets/style/components/tables.css
+++ b/assets/style/components/tables.css
@@ -7,7 +7,6 @@ td {
 table {
   border-spacing: 0;
   margin-bottom: 1rem;
-  border: 1px solid var(--neutral-n75);
   border-radius: 3px;
 }
 
@@ -15,6 +14,10 @@ table.full-width {
   width: 100%;
 }
 
+.dataTables_scrollHead {
+  background: var(--neutral-n75);
+  padding-top: 10px;
+}
 
 tr:first-of-type *:first-child {
   border-top-left-radius: 3px;
