--- a/assets/style/pages/packages.css
+++ b/assets/style/pages/packages.css
@@ -43,6 +43,9 @@ summary.package-details {
   background: linear-gradient(white, white) padding-box,
     var(--gradient-purpleblue) border-box;
   margin-top: 8px;
+  float: left;
+  width: 33%;
+  height: fit-content;
 }
 
 .package-input,
@@ -106,4 +109,25 @@ summary.package-details {
 #badges-box p {
   border-left: 0.19rem solid var(--primary);
   padding-left: 0.75rem;
+}
+
+@media (max-device-width: 768px), (max-width: 768px) {
+  .biocViewsTreeContainer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .packages-subnav {
+    float: none;
+    width: inherit;
+  }
+
+  #autocompleter {
+    width: 95%;
+  }
+
+  #package-entries-wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
