--- a/assets/js/tree-widget/themes/apple/style.css
+++ b/assets/js/tree-widget/themes/apple/style.css
@@ -37,6 +37,14 @@
   background-position: -72px 0;
 }
 
+.jstree-open > ul > li > ul > li > ins {
+  display: none;
+}
+
+.jstree-open > ul > li > ul > li > a {
+  margin-left: 1rem;
+}
+
 .jstree-apple .jstree-closed > ins {
   background-position: -54px 0;
 }
@@ -69,6 +77,7 @@
 .jstree-apple .jstree-no-dots li,
 .jstree-apple .jstree-no-dots .jstree-leaf > ins {
   padding: 0.5rem;
+  margin: 0.5rem;
   background: transparent;
 }
 
