--- a/assets/style/pages/packages.css
+++ b/assets/style/pages/packages.css
@@ -130,4 +130,8 @@ summary.package-details {
     flex-direction: column;
     align-items: flex-start;
   }
+
+  #package-info-wrapper {
+    gap: 2rem;
+  }
 }
