--- a/assets/style/pages/home.css
+++ b/assets/style/pages/home.css
@@ -74,7 +74,7 @@
 
 .data-scientist-content {
   background: #fff;
-  padding: 2rem;
+  padding: 2rem 2rem 0.8rem;
   border-radius: 4px;
   width: 49rem;
 }
