Added packages to top nav

--- a/layouts/components/header.html
+++ b/layouts/components/header.html
@@ -17,6 +17,7 @@
         <a class="format-bold mobile-link" href="/about/">About</a>
         <a class="format-bold mobile-link" href="/developers/">Developers</a>
         <a class="format-bold mobile-link" href="/help/">Learn</a>
+        <a class="format-bold mobile-link" href="/packages/release/BiocViews.html#___Software">Packages</a>
       </div>
       <div class="search-container">
         <form
