--- a/assets/style/pages/home.css
+++ b/assets/style/pages/home.css
@@ -47,15 +47,15 @@
 
 .doodle-data-scientist-container {
   display: flex;
-  margin: 1rem 0.2rem 1rem 0.4rem;
+  justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .brand-gradient-border {
   background-image: var(--gradient-brand);
   border-radius: 4px;
   padding: 1px;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 .warmcool-gradient-border {
