--- a/layouts/_docker_subnav.html
+++ b/layouts/_docker_subnav.html
@@ -1,42 +1,51 @@
-<div class="sidebar-box">
-  <div class="sidebar-box-header">
-    <p class="format-bold format-underline">Jump to:</p>
+<div class="sidebar-nav-container">
+  <div class="sidebar-nav">
+    <span class="sidebar-header">
+      <p class="format-bold">Jump to:</p>
+      <img
+        class="mobile-chevron"
+        src="/images/icons/chevron-down.jpg"
+        alt="collapse-chevron" />
+    </span>
+
+    <nav class="internal-nav" aria-label="Page navigation">
+      <a class="sidebar-nav-button selected-nav" href="#quickstart"
+        >Quick start
+      </a>
+      <a class="sidebar-nav-button" href="#intro">Why Use Containers</a>
+      <a class="sidebar-nav-button" href="#goals">Goals for new containers </a>
+      <a class="sidebar-nav-button" href="#current">Current Containers </a>
+      <a class="sidebar-nav-button" href="#usage">Using Containers</a>
+      <a class="sidebar-nav-button" href="#running">Running Containers </a>
+      <a class="sidebar-nav-button" href="#mounting">
+        Mounting Additional Volume
+      </a>
+      <a class="sidebar-nav-button" href="#dockercompose">
+        Using docker-compose
+      </a>
+      <a class="sidebar-nav-button" href="#binarypackages">
+        Using Binary Packages
+      </a>
+      <a class="sidebar-nav-button" href="#modify">Modifying Containers </a>
+      <a class="sidebar-nav-button" href="#singularity">Singularity </a>
+      <a class="sidebar-nav-button" href="#msft">
+        Microsoft Azure Container Instances
+      </a>
+      <a class="sidebar-nav-button" href="#mcr">
+        Using containers hosted on Microsoft Container Registry
+      </a>
+      <a class="sidebar-nav-button" href="#aci">
+        Use Azure Container Instances to run bioconductor images on-demand on
+        Azure
+      </a>
+      <a class="sidebar-nav-button" href="#contribute">How to contribute </a>
+      <a class="sidebar-nav-button" href="#deprecation">Deprecation Notice</a>
+      <a class="sidebar-nav-button" href="#legacy">Legacy Containers </a>
+      <a class="sidebar-nav-button" href="#reason">Reason for deprecation </a>
+      <a class="sidebar-nav-button" href="#issues">Reporting issues </a>
+      <a class="sidebar-nav-button" href="#acknowledgements">
+        Acknowledgements
+      </a>
+    </nav>
   </div>
-  <nav>
-    <div><a href="#quickstart">Quick start</a></div>
-    <div>
-      <a href="#intro">Why Use Containers</a>
-    </div>
-    <div><a href="#goals">Goals for new containers</a></div>
-    <div><a href="#current">Current Containers</a></div>
-    <div>
-      <a href="#usage">Using Containers</a>
-    </div>
-    <div><a href="#running">Running Containers</a></div>
-    <div><a href="#mounting">Mounting Additional Volume</a></div>
-    <div><a href="#dockercompose">Using docker-compose</a></div>
-    <div><a href="#binarypackages">Using Binary Packages</a></div>
-    <div><a href="#modify">Modifying Containers</a></div>
-    <div><a href="#singularity">Singularity</a></div>
-    <div>
-      <a href="#msft">Microsoft Azure Container Instances</a>
-    </div>
-    <div>
-      <a href="#mcr">Using containers hosted on Microsoft Container Registry</a>
-    </div>
-    <div>
-      <a href="#aci"
-        >Use Azure Container Instances to run bioconductor images on-demand on
-        Azure</a
-      >
-    </div>
-    <div><a href="#contribute">How to contribute</a></div>
-    <div>
-      <a href="#deprecation">Deprecation Notice</a>
-    </div>
-    <div><a href="#legacy">Legacy Containers</a></div>
-    <div><a href="#reason">Reason for deprecation</a></div>
-    <div><a href="#issues">Reporting issues</a></div>
-    <div><a href="#acknowledgements">Acknowledgements</a></div>
-  </nav>
 </div>
