changed styling and html of dockersubnav

--- a/layouts/_docker_subnav.html
+++ b/layouts/_docker_subnav.html
@@ -9,40 +9,66 @@
     </span>
 
     <nav class="internal-nav" aria-label="Page navigation">
-      <a class="sidebar-nav-button selected-nav" href="#quickstart"
+      <a class="sidebar-nav-button selected-nav" href="#quick-start"
         >Quick start
       </a>
-      <a class="sidebar-nav-button" href="#intro">Why Use Containers</a>
-      <a class="sidebar-nav-button" href="#goals">Goals for new containers </a>
-      <a class="sidebar-nav-button" href="#current">Current Containers </a>
-      <a class="sidebar-nav-button" href="#usage">Using Containers</a>
-      <a class="sidebar-nav-button" href="#running">Running Containers </a>
-      <a class="sidebar-nav-button" href="#mounting">
+      <a class="sidebar-nav-button" href="#why-use-containers"
+        >Why Use Containers</a
+      >
+      <a class="sidebar-nav-button" href="#goals-for-new-container-architecture"
+        >Goals for new containers
+      </a>
+      <a class="sidebar-nav-button" href="#current-containers"
+        >Current Containers
+      </a>
+      <a class="sidebar-nav-button" href="#using-the-containers"
+        >Using Containers</a
+      >
+      <a class="sidebar-nav-button" href="#list-running-containers"
+        >Running Containers
+      </a>
+      <a class="sidebar-nav-button" href="#mounting-additional-volume">
         Mounting Additional Volume
       </a>
-      <a class="sidebar-nav-button" href="#dockercompose">
+      <a class="sidebar-nav-button" href="#using-docker-compose">
         Using docker-compose
       </a>
-      <a class="sidebar-nav-button" href="#binarypackages">
+      <a class="sidebar-nav-button" href="#using-binary-packages">
         Using Binary Packages
       </a>
-      <a class="sidebar-nav-button" href="#modify">Modifying Containers </a>
+      <a class="sidebar-nav-button" href="#modifying-containers"
+        >Modifying Containers
+      </a>
       <a class="sidebar-nav-button" href="#singularity">Singularity </a>
-      <a class="sidebar-nav-button" href="#msft">
+      <a class="sidebar-nav-button" href="#microsoft-azure-container-instances">
         Microsoft Azure Container Instances
       </a>
-      <a class="sidebar-nav-button" href="#mcr">
+      <a
+        class="sidebar-nav-button"
+        href="#using-containers-hosted-on-microsoft-container-registry">
         Using containers hosted on Microsoft Container Registry
       </a>
-      <a class="sidebar-nav-button" href="#aci">
+      <a
+        class="sidebar-nav-button"
+        href="#use-azure-container-instances-to-run-bioconductor-images-on-demand-on-azure">
         Use Azure Container Instances to run bioconductor images on-demand on
         Azure
       </a>
-      <a class="sidebar-nav-button" href="#contribute">How to contribute </a>
-      <a class="sidebar-nav-button" href="#deprecation">Deprecation Notice</a>
-      <a class="sidebar-nav-button" href="#legacy">Legacy Containers </a>
-      <a class="sidebar-nav-button" href="#reason">Reason for deprecation </a>
-      <a class="sidebar-nav-button" href="#issues">Reporting issues </a>
+      <a class="sidebar-nav-button" href="#how-to-contribute"
+        >How to contribute
+      </a>
+      <a class="sidebar-nav-button" href="#deprecation-notice"
+        >Deprecation Notice</a
+      >
+      <a class="sidebar-nav-button" href="#legacy-containers"
+        >Legacy Containers
+      </a>
+      <a class="sidebar-nav-button" href="#reason-for-deprecation"
+        >Reason for deprecation
+      </a>
+      <a class="sidebar-nav-button" href="#reporting-issues"
+        >Reporting issues
+      </a>
       <a class="sidebar-nav-button" href="#acknowledgements">
         Acknowledgements
       </a>
