--- a/assets/style/components/breadcrumbs.css
+++ b/assets/style/components/breadcrumbs.css
@@ -18,15 +18,15 @@
   font-weight: bold;
 }
 
+.breadcrumbs li {
+  padding-left: 0 ;
+}
+
 .breadcrumbs a {
   color: var(--neutral-n400);
   text-decoration: none;
 }
 
-.breadcrumbs li::before {
-  content: "";
-  width: 0;
-  height: 0;
-  padding: 0;
-  margin: 0;
+.breadcrumbs li::marker {
+  content: none;
 }
