--- a/assets/style/sections/sidebar.css
+++ b/assets/style/sections/sidebar.css
@@ -44,6 +44,7 @@
   border-radius: 8px;
   background: linear-gradient(white, white) padding-box,
     var(--gradient-brand) border-box;
+  height: 35rem;
 }
 
 .internal-nav {
@@ -52,6 +53,7 @@
   flex-direction: column;
   gap: 10px;
   padding: 8px;
+  overflow: scroll;
 }
 
 .internal-nav p {
@@ -137,7 +139,7 @@
   padding-right: 0.75rem;
 }
 
-@media (max-device-width: 768px), (width <= 768px)   {
+@media (max-device-width: 768px), (width <= 768px) {
   .left-col-inner {
     margin-left: 0;
   }
@@ -193,4 +195,3 @@
     height: calc(100% + 19rem);
   }
 }
-
