--- a/assets/style/sections/sidebar.css
+++ b/assets/style/sections/sidebar.css
@@ -44,7 +44,8 @@
   border-radius: 8px;
   background: linear-gradient(white, white) padding-box,
     var(--gradient-brand) border-box;
-  height: 23rem;
+  height: fit-content;
+  max-height: 35rem;
 }
 
 .internal-nav {
